--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Tool to crawl robinhood statistics data",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test"
+    "test": "mocha ./test",
+    "preversion": "npm test",
+    "postversion": "git push && git push --tags"
   },
   "author": "Daniel Wang",
   "repository": {
